--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
- <h1> I did something</h1>
- <h2> TIMES 2</h2>
+ <h1>I did something</h1>
+ <h2>TIMES 2</h2>
+ <h3>poopypants</h3>
+ <h4>Howdy sir</h4>
+ <p>ha</p>
 </body>
 </html>
